<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:style="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/gradient_background_share"
              android:clickable="true"
              android:focusable="true"
              android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_pick_size"
        android:background="@color/black_image_alpha">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:alpha="0.4"
            android:text="@string/ajouter_une_photo"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_pick_size"
            android:scaleType="centerCrop"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/arrow_back"/>

            <ImageView
                android:layout_width="@dimen/logo_size"
                android:layout_height="@dimen/logo_size"
                android:layout_centerInParent="true"
                android:src="@drawable/logo"/>
        </RelativeLayout>

    </RelativeLayout>

    <pc.dd.liveapp.ui.widget.VerticalScrollView
        style="@style/ScrollBarThumb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xhuge"
                    android:layout_marginRight="@dimen/spacing_xhuge"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@color/black_alpha">

                    <EditText
                        android:id="@+id/nameUserRegistration"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/lastNameUserRegistration"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="12sp">
                    </EditText>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pr_nom"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xhuge"
                    android:layout_marginRight="@dimen/spacing_xhuge"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@color/black_alpha">

                    <EditText
                        android:id="@+id/lastNameUserRegistration"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/addressEditTextFull"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="12sp">
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/spacing_normal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adresse"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xlarge"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@color/black_alpha">

                    <EditText
                        android:id="@+id/addressEditTextFull"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/addressEditTextNotFull"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="12sp">
                    </EditText>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xlarge"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/spacing_micro"
                    android:background="@color/black_alpha">

                    <EditText
                        android:id="@+id/addressEditTextNotFull"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center"
                        android:imeOptions="actionNext"
                        android:nextFocusDown="@+id/aboutEditTextRegistration"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="12sp">
                    </EditText>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:text="@string/date_de_naissance"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <pc.dd.liveapp.ui.widget.MyDatePicker
                        android:id="@+id/myDatePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_large"
                android:layout_marginTop="@dimen/padding_large"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/propos_de_moi"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_200_caract_res_max"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_xlarge"
                    android:layout_marginRight="@dimen/spacing_xlarge"
                    android:layout_marginTop="@dimen/padding_normal"
                    android:background="@color/black_alpha">

                    <EditText
                        android:id="@+id/aboutEditTextRegistration"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_comment"
                        android:background="@null"
                        android:gravity="top"
                        android:imeOptions="actionDone"
                        android:inputType="textMultiLine"
                        android:maxLength="200"
                        android:textColor="@color/white"
                        android:textSize="12sp"/>
                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/cardViewSaveDataRegistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/padding_normal"
                    app:cardBackgroundColor="@color/white_for_card_btn"
                    app:cardCornerRadius="8dp"
                    >

                    <TextView
                        android:id="@+id/temp_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginLeft="@dimen/padding_large"
                        android:layout_marginRight="@dimen/padding_large"
                        android:layout_marginTop="2dp"
                        android:text="@string/inscription"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </pc.dd.liveapp.ui.widget.VerticalScrollView>
</LinearLayout>